<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="about_home_screen">About Home screen</string>
    <string name="add_icon_to_home_screen_title">Add new apps to Home screen</string>
    <string name="all_apps_saerch_hint">Search</string>
    <string name="app_icon_badges_title">App icon badges</string>
    <string name="apps_button_title">Show Apps screen button on Home screen</string>
    <string name="cover_screen_mirroring">Cover screen mirroring</string>
    <string name="discover_title">Discover</string>
    <string name="edge_handler_preference_color_category">settings_handle_color_category</string>
    <string name="edge_handler_preference_color_key">settings_handle_color</string>
    <string name="edge_handler_preference_move_side_key">settings_move_side</string>
    <string name="edge_handler_preference_side_position_key">setting_side_position</string>
    <string name="edge_handler_preference_size_category">settings_handle_size_category</string>
    <string name="edge_handler_preference_size_key">settings_handle_size</string>
    <string name="edge_handler_preference_transparency_category">settings_handle_transparency_category</string>
    <string name="edge_handler_preference_transparency_key">settings_handle_transparency</string>
    <string name="edge_handler_preference_width_category">settings_handle_width_category</string>
    <string name="edge_handler_preference_width_key">settings_handle_width</string>
    <string name="edge_transparency_high">High</string>
    <string name="edge_transparency_low">Low</string>
    <string name="home_screen_global_setting_title">Home screen</string>
    <string name="home_screen_layout">Home screen layout</string>
    <string name="home_screen_screengrid">Home screen grid</string>
    <string name="home_screen_screengrid_keyword" />
    <string name="home_screen_settings_hide_apps_home_apps">Hide apps on Home and Apps screens</string>
    <string name="home_screen_settings_hide_apps_home_only">Hide apps on Home screen</string>
    <string name="home_setting_button_text">Settings</string>
    <string name="homes_screen_settings_add_media_page_to_homescreen_keyword">Free,프리,Samsung Free,Samsung O,Galaxy Free,삼성 프리,Google Discover,Discover,디스커버,구글 디스커버</string>
    <string name="homes_screen_settings_hide_apps_keyword" />
    <string name="homes_screen_settings_keyword" />
    <string name="homeup">HomeUp</string>
    <string name="ime_action_done">Done</string>
    <string name="iwss_app_labels">Show app labels on Home screen</string>
    <string name="iwss_app_size_home_and_apps_screens">App size on Home and Apps screens</string>
    <string name="iwss_widget_labels">Show labels for featured widgets</string>
    <string name="lock_screen_layout_title">Lock Home screen layout</string>
    <string name="media_page_title">Add media page to Home screen</string>
    <string name="notification_panel_setting_title">Swipe down for notification panel</string>
    <string name="option_menu_contact_up">Contact us</string>
    <string name="pref_key_bottom_padding">pref_bottom_padding</string>
    <string name="pref_key_handle">pref_handle</string>
    <string name="pref_key_help_image">pref_help_image</string>
    <string name="pref_key_panels">pref_panels</string>
    <string name="pref_key_show_in_landscape">pref_show_in_landscape</string>
    <string name="pref_key_show_on">pref_show_on</string>
    <string name="prefs_about_page_category">pref_about_page_category</string>
    <string name="prefs_key_about_page">pref_about_page</string>
    <string name="prefs_key_contact_us">pref_contact_us</string>
    <string name="prefs_key_edge_handle_setting">pref_edge_handle_setting</string>
    <string name="prefs_key_edge_setting">pref_edge_setting</string>
    <string name="prefs_key_landscape_screen">pref_landscape_screen</string>
    <string name="prefs_relative_link">pref_relative_link</string>
    <string name="prefs_relative_link_category">pref_relative_link_category</string>
    <string name="prefs_setting_category">pref_setting_category</string>
    <string name="quick_access_finder_setting_title">Search from Home</string>
    <string name="restrictions_desc_flow_pointer_from_where_dex">"Set pointer flow direction. If Flow pointer to tablet/phone screen setting is not enabled, this has no effect.
- \"right\": pointer flows from the right side of the monitor to the left side of the tablet/phone.
- \"left\": pointer flows from the left side of the monitor to the right side of the phone/tablet.
- \"null\": or not specified: uses value set in the Samsung DeX Settings menu.
Note: Value types are String. They are case sensitive."</string>
    <string name="restrictions_desc_flow_pointer_is_on_dex">"Allows IT admins to enable or disable the feature that allows device users to move a mouse cursor between their mobile device running DeX (tablet/phone) and the monitor screen connected to DeX.
Restriction values determine if the setting is enabled or disabled. If the restriction value is set to:
- \"true\": the setting is enabled. (Flow pointer to tablet/phone screen)
- \"false\": the setting is disabled.
- \"null\" or not specified: uses the value set in the Samsung DeX Settings menu.
Note: Value types are String. They are case sensitive."</string>
    <string name="restrictions_desc_resolution_user_setting">"Set display resolution. If the selected resolution is not supported on your monitor or TV which phone or tablet is connected to, the next highest resolution supported on your monitor or TV will be set. Below is the list of currently supported display resolutions on Samsung DeX.
- \"UWQHD\": 3440x1440
- \"WQXGA\": 2560x1600
- \"WQHD\": 2560x1440
- \"UWFHD\": 2560x1080
- \"WUXGA\": 1920x1200
- \"FHD\": 1920x1080
- \"HD\": 1600x900
- \"null\": or not specified: uses value set in the above.
Note: Value types are String and case sensitive. Some resolutions may require specific HDMI adapters. Please visit Samsungdex.com site to get detail info."</string>
    <string name="restrictions_desc_skip_welcome_screen">"The following screens can be skipped.
1. “Welcome to Samsung DeX” screen.
2. Samsung DeX end user notification page.
Restriction values determine what setup screens are shown to device users. If the restriction value is set to:
- \"true\": Samsung DeX setup screens are not shown to device users.
- \"false\", \"null\" or not specified: Samsung DeX setup screens are shown to device users.
Note: Value types are String. They are case sensitive."</string>
    <string name="restrictions_title_flow_pointer_from_where_dex">Pointer flow direction</string>
    <string name="restrictions_title_flow_pointer_is_on_dex">Control mouse cursor flow</string>
    <string name="restrictions_title_resolution_user_setting">DeX display resolution</string>
    <string name="restrictions_title_skip_welcome_screen">Skip Samsung DeX setup screens</string>
    <string name="rotate_to_landscape_mode">Rotate to landscape mode</string>
    <string name="routine_external_dex_dialog_title">Samsung DeX (wireless display)</string>
    <string name="routine_internal_dex_dialog_title">Samsung DeX (tablet screen)</string>
    <string name="search">Search</string>
    <string name="search_settings_category_privacy">Privacy</string>
    <string name="search_settings_contact_us">Contact us</string>
    <string name="search_settings_customization_service">Customization Service</string>
    <string name="search_settings_header_main_view">Main view</string>
    <string name="search_settings_header_search_results">Main view</string>
    <string name="search_settings_personal_data_intelligence">Personal Data Intelligence</string>
    <string name="search_settings_privacy_policy">Privacy Notice</string>
    <string name="search_settings_search_locations">Choose apps to search in</string>
    <string name="search_settings_show_app_options_searches">Show app options in searches</string>
    <string name="search_settings_show_downloads_and_screenshots">Show Downloads and Screenshots</string>
    <string name="search_settings_show_hidden_apps">Show hidden apps</string>
    <string name="search_settings_show_popular_searches">Show popular searches</string>
    <string name="search_settings_show_recent_searches">Show recent searches</string>
    <string name="search_settings_show_search_documents">Search text in documents</string>
    <string name="search_settings_show_suggested_apps">Show suggested apps</string>
    <string name="search_settings_show_suggested_content">Show suggested content</string>
    <string name="search_settings_show_suggested_settings">Show Settings topics</string>
    <string name="search_settings_show_web_history">Show web history</string>
    <string name="search_settings_show_web_search_suggestions">Show web search suggestions</string>
    <string name="search_settings_test_show_raw_wallpaper">Test wallpaper raw</string>
    <string name="search_settings_test_show_recall_card">Test show recall card</string>
    <string name="search_settings_test_show_semantic_score">Test show semantic score</string>
    <string name="search_settings_test_sse_no_support">Test SSE not supported</string>
    <string name="search_settings_test_threshold">Test recall threshold</string>
    <string name="search_settings_title">Settings</string>
    <string name="search_tts_clear">Clear search field</string>
    <string name="setting_apps_screen_grid">Apps screen grid</string>
    <string name="setting_apps_screen_grid_keyword" />
    <string name="setting_folder_grid">Folder grid</string>
    <string name="settings_aboout_edge_panels">About Edge panels</string>
    <string name="settings_contact_us">Contact us</string>
    <string name="settings_dialog_open_in_split_screen_view">Open in split screen view</string>
    <string name="settings_dialog_show_recent_apps">Show recent apps</string>
    <string name="settings_edge_handler_lock_handle_position">Lock handle position</string>
    <string name="settings_edge_panels">Edge panels</string>
    <string name="settings_handle">Handle</string>
    <string name="settings_handle_position">Position</string>
    <string name="settings_handle_size">Size</string>
    <string name="settings_handle_size_large">Large</string>
    <string name="settings_handle_size_small">Small</string>
    <string name="settings_handle_style">Style</string>
    <string name="settings_handle_transparency">Transparency</string>
    <string name="settings_handle_width">Width</string>
    <string name="settings_handle_width_thick">Thick</string>
    <string name="settings_handle_width_thin">Thin</string>
    <string name="settings_panels">Panels</string>
    <string name="settings_show_app_names">Show app names</string>
    <string name="settings_show_in_landscape_title">Show in landscape mode</string>
    <string name="settings_show_on">Show on</string>
    <string name="show_finder_on_home_screen">Show Finder on Home screen</string>
    <string name="theme_button_text">Themes</string>
    <string name="voice_search_button">Voice search</string>
    <string name="wallpaper_button_text">Wallpaper and style</string>
    <string name="widget_button_text">Widgets</string>
</resources>