<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/search_settings_title" android:key="setting_title_privacy"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/search_settings_header_main_view" android:key="pref_category_apps">
        <SwitchPreferenceCompat android:title="@string/search_settings_show_suggested_apps" android:key="key_show_suggested_apps" />
        <SwitchPreferenceCompat android:title="@string/search_settings_show_suggested_settings" android:key="key_show_suggested_settings" />
        <SwitchPreferenceCompat android:title="@string/search_settings_show_web_history" android:key="key_show_suggested_chrome_doc" app:isPreferenceVisible="false" />
        <SwitchPreferenceCompat android:title="@string/search_settings_show_recent_searches" android:key="key_show_search_history" />
        <SwitchPreferenceCompat android:title="@string/search_settings_show_popular_searches" android:key="key_show_hot_words" app:isPreferenceVisible="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/search_settings_header_search_results" android:key="pref_category_apps">
        <Preference android:title="@string/search_settings_search_locations" android:key="key_choose_apps_to_search_in" app:isPreferenceVisible="false" />
        <SwitchPreferenceCompat android:title="@string/search_settings_show_suggested_content" android:key="key_show_search_suggestion" />
        <SwitchPreferenceCompat android:title="@string/search_settings_show_app_options_searches" android:key="key_show_app_options_searches" />
        <SwitchPreferenceCompat android:title="@string/search_settings_show_web_search_suggestions" android:key="key_show_web_search_suggestions" app:isPreferenceVisible="false" />
        <SwitchPreferenceCompat android:title="@string/search_settings_show_hidden_apps" android:key="key_show_hidden_apps" />
        <SwitchPreferenceCompat android:title="@string/search_settings_show_downloads_and_screenshots" android:key="key_show_downloads_screenshots" />
        <SwitchPreferenceCompat android:title="@string/search_settings_show_search_documents" android:key="key_show_search_documents" app:isPreferenceVisible="false" />
    </PreferenceCategory>
    <PreferenceCategory app:isPreferenceVisible="false">
        <Preference android:title="@string/search_settings_customization_service" android:key="key_customization_service" app:isPreferenceVisible="false" />
        <Preference android:title="@string/search_settings_personal_data_intelligence" android:key="key_personal_data_intelligence" app:isPreferenceVisible="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/search_settings_category_privacy" app:isPreferenceVisible="false">
        <Preference android:title="@string/search_settings_privacy_policy" android:key="key_privacy_notice" app:isPreferenceVisible="false" />
    </PreferenceCategory>
    <PreferenceCategory>
        <Preference android:title="@string/search_settings_contact_us" android:key="key_contact_us" app:isPreferenceVisible="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Test Mode" app:isPreferenceVisible="false">
        <SwitchPreferenceCompat android:title="@string/search_settings_test_sse_no_support" android:key="key_test_sse_no_support" app:isPreferenceVisible="false" />
        <SwitchPreferenceCompat android:title="@string/search_settings_test_show_raw_wallpaper" android:key="key_test_show_wallpaper_raw" app:isPreferenceVisible="false" />
        <SwitchPreferenceCompat android:title="@string/search_settings_test_show_semantic_score" android:key="key_test_show_semantic_score" app:isPreferenceVisible="false" />
        <SeekBarPreference android:title="@string/search_settings_test_threshold" android:key="key_test_recall_threshold" app:isPreferenceVisible="false" />
        <SwitchPreferenceCompat android:title="@string/search_settings_test_show_recall_card" android:key="key_test_show_recall_card" app:isPreferenceVisible="false" />
    </PreferenceCategory>
    <PreferenceCategory />
</PreferenceScreen>
