<?xml version="1.0" encoding="utf-8"?>
<com.honeyspace.ui.honeypots.homescreen.pageedit.PageEditPanel android:layout_gravity="center|bottom" android:id="@id/page_edit_panel" android:tag="layout/page_edit_panel_0" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="top" android:orientation="horizontal" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.honeyspace.ui.honeypots.homescreen.pageedit.WallpaperButton android:id="@id/wallpapaer_button" android:tag="binding_1" android:visibility="visible" android:text="@string/wallpaper_button_text" style="@style/PageEditButtonStyle" />
        <com.honeyspace.ui.honeypots.homescreen.pageedit.ThemeButton android:id="@id/theme_button" android:tag="binding_2" android:text="@string/theme_button_text" style="@style/PageEditButtonStyle" />
        <com.honeyspace.ui.honeypots.homescreen.pageedit.WidgetButton android:id="@id/widget_button" android:tag="binding_3" android:text="@string/widget_button_text" style="@style/PageEditButtonStyle" />
        <com.honeyspace.ui.honeypots.homescreen.pageedit.HomeSettingButton android:id="@id/home_setting_button" android:tag="binding_4" android:text="@string/home_setting_button_text" style="@style/PageEditButtonStyle" />
        <com.honeyspace.ui.honeypots.homescreen.pageedit.HomeupButton android:id="@id/homeup_button" android:tag="binding_5" android:text="@string/homeup" style="@style/PageEditButtonStyle" />
    </LinearLayout>
</com.honeyspace.ui.honeypots.homescreen.pageedit.PageEditPanel>
