<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/search_bar" android:tag="layout/widget_search_bar_0" android:layout_width="match_parent" android:layout_height="@dimen/widget_search_bar_container_height"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:tag="binding_1" android:background="@drawable/widget_search_bar_bg" android:clipChildren="false" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="@dimen/widget_search_bar_height">
        <EditText android:textSize="@dimen/widget_search_bar_text_size" android:ellipsize="end" android:gravity="center_vertical" android:layout_gravity="center" android:id="@id/search_edit" android:tag="binding_2" android:background="@null" android:layout_width="0.0dp" android:layout_height="match_parent" android:hint="@string/search" android:maxLines="1" android:singleLine="true" android:maxLength="30" android:layout_weight="1.0" android:privateImeOptions="disablePrediction=true" android:imeOptions="flagNoExtractUi" android:imeActionLabel="@string/ime_action_done" android:fontFamily="sec" android:textFontWeight="600" />
        <com.honeyspace.ui.honeypots.widgetlist.presentation.VoiceSearchIcon android:layout_gravity="center_vertical" android:id="@id/search_voice" android:tag="binding_3" android:background="@drawable/voice_search_icon_bg" android:longClickable="true" android:layout_width="@dimen/search_bar_icon_size" android:layout_height="@dimen/search_bar_icon_size" android:scaleType="fitCenter" android:contentDescription="@string/voice_search_button" android:tooltipText="@string/voice_search_button" />
        <androidx.appcompat.widget.AppCompatImageButton android:layout_gravity="center_vertical" android:id="@id/search_cancel" android:tag="binding_4" android:background="@drawable/voice_search_icon_bg" android:longClickable="true" android:layout_width="@dimen/search_bar_icon_size" android:layout_height="@dimen/search_bar_icon_size" android:src="@drawable/widget_search_input_close" android:scaleType="fitCenter" android:contentDescription="@string/search_tts_clear" android:tooltipText="@string/search_tts_clear" />
    </LinearLayout>
</FrameLayout>
